# skynet

./: .envrc  .gitignore  .issue  .project-init  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  check-changelog.sh  check-version-bump.sh  compute-version.sh  compute_version.py  flake.nix
.beads/: metadata.json
.claude/: settings.json
.claude/plans/: 2026-03-16-controller-ui-v03-design.md  2026-03-16-controller-ui-v03-plan.md  2026-03-16-controller-ui-v03-requirements.md
.envrc.d/: beads.sh  dolt.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  release.yml
agent-runtime/: SPEC.md  pyproject.toml
agent-runtime/src/agent_runtime/: __init__.py  config.py  launcher.py
agent-runtime/tests/: test_config.py  test_launcher.py
channels/: SPEC.md  pyproject.toml
channels/src/channels/: __init__.py  xor.py
channels/tests/: test_channels.py  test_xor.py
chat-bridge/: DESIGN.md  server.py  viewer.py
docs/: ARCHITECTURE.md  DESIGN.md
docs/plans/: 2026-03-15-mesh-server-v01-design.md  2026-03-15-mesh-server-v01-plan.md  2026-03-16-live-integration-design.md  2026-03-16-live-integration-plan.md
mesh-server/: SPEC.md  pyproject.toml
mesh-server/scripts/: tail-events.py
mesh-server/src/mesh_server/: __init__.py  api.py  attachments.py  auth.py  events.py  launch.py  projections.py  server.py  spawner.py  tools.py  types.py
mesh-server/src/mesh_server/static/: index.html
mesh-server/tests/: fake_claude.py  test_api.py  test_auth.py  test_e2e.py  test_events.py  test_integration.py  test_live_pipeline.py  test_projections.py  test_spawner.py  test_supervisor_wiring.py  test_tools.py
