[project]
name = "mesh-server"
version = "0.3.0"
description = "MCP Mesh Server — event-sourced message-passing actor system"
requires-python = ">=3.13"
dependencies = [
    "agent-runtime",
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_server"]

[tool.uv.sources]
agent-runtime = { path = "../agent-runtime" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: live pipeline integration tests (start real server, spawn fake agent)",
]
